configure for local HTTP connections only

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,9 @@ BASE_DOMAIN=your-domain.com
 # if your server is behind the NAT
 #LOCAL_IP=192.168.11.11
 
+# disable HTTPS, cert generation, and Let's Encrypt
+PROTOCOL=http
+
 # Turn on this parameter once you change variables!
 # After a successful start, turn this parameter back off
 #FORCE_RECONFIGURE=true
