--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,16 +2,9 @@ version: '3'
 
 services:
 
-  certbot:
-    image: certbot/certbot:v1.4.0
-    volumes:
-      - ./volumes/letsencrypt:/etc/letsencrypt
-    ports: 
-      - 80:80
-    entrypoint: "certbot certonly --non-interactive --agree-tos -m ${ADMIN_EMAIL} --standalone -d ${BASE_DOMAIN}"
-
   postgresql:
-    image: postgres:12-alpine
+    image: docker.io/postgres:12-alpine
+    env_file: .env
     ports:
       - 5432:5432
     environment:
@@ -22,13 +15,13 @@ services:
       - ./volumes/db:/var/lib/postgresql/data
 
   hmdm:
-    image: headwindmdm/hmdm:0.1.4
+    image: docker.io/headwindmdm/hmdm:0.1.4
+    env_file: .env
     ports:
-      - 443:8443
+      - 8080:8080
       - 31000:31000
     volumes:
       - ./volumes/work:/usr/local/tomcat/work
-      - ./volumes/letsencrypt:/etc/letsencrypt
     environment:
       SQL_HOST: postgresql
       SQL_USER: ${SQL_USER}
